fix date bug, overflow in project buttons

--- a/src/scss/_projects.scss
+++ b/src/scss/_projects.scss
@@ -24,6 +24,7 @@
 	margin: 2rem 0;
 	width: 100%;
 	max-width: 20rem;
+	overflow-y: none;
 	overflow-x: auto;
 	background-color: inherit;
 	border: 0;
